# SerialTerm

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT.md  PACKAGING.md  PACKAGING_DEBIAN.md  README.en.md  README.md  deny.toml
.cargo/: audit.toml
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml  package-deb.yml
assets/: README.md
assets/screenshots/: README.md
debian/: README.md  changelog  control  copyright  postinst  postrm  rules  serial-term.1  serial-term.desktop  serial-term.manpages
proofs/: README.md
proofs/raw/: SHA256SUMS_2026-03-03.txt  SHA256SUMS_2026-03-23.txt  SHA256SUMS_2026-03-24.txt
scripts/: README.md  build-deb.sh  build-exe.ps1  build-installer.ps1  install-deps-windows.ps1  install-deps.sh  install-hooks.sh  pre-commit-checks-windows.ps1  pre-commit-checks.sh  run-soak-test.sh
src/: README.md  app.rs  main.rs
src/application/: README.md  mod.rs  use_cases.rs
src/core/: README.md  connection.rs  logger.rs  mod.rs  serial_manager.rs  settings.rs
src/ui/: README.md  header_bar.rs  input_panel.rs  log_viewer.rs  mod.rs  runtime.rs  terminal_panel.rs  theme.rs  tools_dialog.rs  window.rs
src/ui/connection_panel/: common.rs  mod.rs  serial.rs
src/ui/i18n/: logs.rs  menus.rs  mod.rs  serial.rs  shortcuts.rs  status.rs  tools.rs
src/ui/log_viewer/: model.rs  window.rs
src/ui/terminal_panel/: ansi.rs  display.rs
src/ui/window/: actions.rs  dialogs.rs  lifecycle.rs  operations.rs  shell.rs  signals.rs
src/ui/window/shell/: tests.rs
