[package]
name = "serial-term"
version = "1.0.0"
edition = "2021"
authors = ["M@nu <terraspi13@gmail.com>"]
description = "Terminal série avec interface GTK4/Libadwaita"
license = "GPL-3.0-or-later"
rust-version = "1.75"

[dependencies]
# GTK4 + Libadwaita pour l'interface
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "net", "io-util", "macros"] }

# Sérialisation / Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilitaires
chrono = "0.4"
dirs = "5"
anyhow = "1"
fasteval = "0.2.4"
tokio-serial = "5.4.5"
async-channel = "2.5.0"
async-trait = "0.1.89"
vte = { version = "0.15.0", features = ["ansi"] }

# Forks vendorés : motif et critère de sortie suivis dans DEVELOPMENT.md
# (section « Suivi des forks supply-chain (vendor/) »). À revérifier trimestriellement.
[patch.crates-io]
serialport = { path = "vendor/serialport" }
unescaper = { path = "vendor/unescaper" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
